# tauri-alpine-fastapi-template

./: .gitignore  LICENSE  README.md  bun.lockb  index.html  package.json  pyproject.toml  tailwind.config.ts
src/: main.ts
src-python/: main.py  pyinstaller.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
